Some Checkstyle experimentation.